docs: 规划件、角色矩阵与中英文文档同步到新功能
- 新增 OpenSpec change java-chains-workbench：proposal / design /
  tasks 与三份 spec delta（services、presets、codebase 边界）
- 角色矩阵把 src/service、src/preset 归入功能开发 exploit 写入域，
  并同步 AGENT-ROLES、DESIGN-agents、agent.ps1 提示词与中英 README
- 新增 docs/DESIGN-services.md：记录「不需要 Spring」的实测依据、
  Shiro 双重编码的根因、上游端口键与载荷类型约束、模块边界
- 中英 README 新增「预设链」「恶意服务器」章节，同步导航顺序、
  配置页分组、项目结构与六套自检的运行方式与 --add-opens 依赖
- PROGRESS 新增六行状态与两条阶段记录；AI_REPORT 追加本轮章节
- .gitignore 忽略 .pi/ 本地会话目录